--- a/latihan1.html
+++ b/latihan1.html
@@ -7,7 +7,16 @@
     <title>Latihan Github Collaboration</title>
 </head>
 <body>
+    <!-- navbar -->
+    <h1>Ini bagian Navbar</h1>
+
     <h1>Hello World</h1>
     <p>this is paragraf 1</p>
+    
+    <!-- hero-section -->
+    <!-- pricing -->
+    <!-- footer -->
+
+
 </body>
 </html>
